# LearningRust

./: .gitignore  Cargo.toml  README.md  Rust exercise.txt  hello.txt  sync.bat
.github/workflow/: devops.yml
.github/workflows/: devops.yml
src/: arrays.rs  conditionals.rs  functions.rs  loops.rs  main.rs  print.rs  strings.rs  tuples.rs  types.rs  vars.rs
src/crates_discover/tonic/: Cargo.toml
src/crates_discover/tonic/proto/: helloworld.proto
src/crates_discover/tonic/src/: server.rs
src/exercism/ackkaman_number/: Cargo.toml
src/exercism/goldbach_conjecture/: main.rs
src/exercism/reverse-string/: Cargo.toml
src/fs/: Cargo.toml  articles.json
src/fs/src/: main.rs
src/learn_rust_by_building_real_applications/: first_app.rs  main.rs  second_app.rs
src/learn_rust_by_building_real_applications/public/: hello.html
src/learn_rust_by_building_real_applications/second_app/: request_handler.rs  server.rs
src/rhymu_tutorial/: Cargo.toml
src/rhymu_tutorial/src/: borrowing.rs  dyn_prog.rs  generics.rs  hands_ex.rs  main.rs
src/rust_upload/: Cargo.toml
src/rust_upload/src/: main.rs
src/testing/src/: main.rs
src/the_book/: enums.rs  error_handling.rs  generics_and_traits.rs  guessing_game_tutorial.rs  life_time.rs  main.rs  ownership.rs  references_and_borrowing.rs  strings.rs  structs.rs  structs_and_enums.rs  testing.rs  var_and_mut.rs
src/the_rust_programming_language_course/: closures.rs  control_flow.rs  drop_trait.rs  guessing_game.rs  higher_order_functions.rs  into_trait.rs  iterators.rs  life_time.rs  main.rs  monomorphism.rs  operator_overloading.rs  slices.rs  strings.rs  structs_and_enums.rs  testing.rs  traits.rs  variables.rs  vectors.rs
src/traversy_media_crash_course/: arrays.rs  cli.rs  conditionals.rs  enums.rs  functions.rs  loops.rs  main.rs  pointers_and_references.rs  print.rs  structs.rs  structs_oop.rs  tuples.rs  vars.rs  vectors.rs
src/ultimate crash course/: collections.rs  collections_enums.rs  control_flow.rs  enums.rs  functions.rs  main.rs  ownership_and_borowing.rs  simple_types.rs  structs_and_traits.rs  structs_and_traits_excersise.rs  variables.rs
(+32 files in other folders)
