[package]
name = "learning_rust_repo"
version = "0.4.0"
authors = ["ammarshahin <ammar0shahin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"

[[bin]]
name = "learning_rust_repo"
path = "src/ultimate crash course/main.rs"
