[package]
name = "learning_rust"
version = "0.4.0"
authors = ["ammarshahin <ammar0shahin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
lazy_static = "1.4"
num = "0.4"
chrono = "0.4"

[[bin]]
name = "learning_rust"
path = "src/exercism/goldbach_conjecture/main.rs"