[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros", "rt-threaded", "fs"] }
uuid = { version = "0.8", features = ["v4"] }
futures = { version = "0.3.17" }
bytes = "0.5.6"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }